feat: update swagger paths response and definitions
